# agent-tui

./: .dockerignore  .gitignore  .shellcheckrc  AGENTS.md  API.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  PROMPT.md  README.md  clippy.toml  docker-compose.yml  install.sh  justfile  package.json  renovate.json  rustfmt.toml
cli/: Cargo.toml  Cross.toml  clippy.toml  justfile  package-lock.json  package.json  rustfmt.toml  sgconfig.yml
cli/crates/agent-tui/: Cargo.toml
cli/crates/agent-tui-adapters/: Cargo.toml  build.rs
cli/crates/agent-tui-adapters/src/: lib.rs
cli/crates/agent-tui-app/: Cargo.toml  build.rs
cli/crates/agent-tui-app/src/: lib.rs
cli/crates/agent-tui-common/: Cargo.toml
cli/crates/agent-tui-common/src/: lib.rs
cli/crates/agent-tui-domain/: Cargo.toml
cli/crates/agent-tui-domain/src/: lib.rs
cli/crates/agent-tui-infra/: Cargo.toml
cli/crates/agent-tui-infra/src/: lib.rs
cli/crates/agent-tui-usecases/: Cargo.toml
cli/crates/agent-tui-usecases/src/: lib.rs
cli/crates/agent-tui/src/: lib.rs  main.rs
cli/crates/agent-tui/tests/: architecture.rs  cli_command_contracts.rs  cli_contracts.rs  cli_smoke.rs  integration_smoke_tests.rs  slow_tests.rs  system_e2e.rs
cli/crates/xtask/: Cargo.toml
cli/crates/xtask/src/: main.rs  tui_explorer.rs
cli/docker/: e2e-tests.sh
cli/docs/: testing-refactor-plan.md
cli/docs/architecture/: clean_arch_target.md  dependencies.json
cli/docs/plans/: 2026-01-25-clean-architecture-refactor.md  2026-01-25-sessions-cli-restructure.md
cli/npm/agent-tui-darwin-arm64/: package.json
cli/npm/agent-tui-darwin-x64/: package.json
cli/npm/agent-tui-linux-arm64/: package.json
cli/npm/agent-tui-linux-x64/: package.json
cli/rule-tests/__snapshots__/: algo-use-sort-by-key-snapshot.yml  algo-use-sort-unstable-by-key-snapshot.yml  algo-use-sort-unstable-snapshot.yml  comp-avoid-regex-in-fn-snapshot.yml  ds-avoid-vec-remove-0-snapshot.yml  iter-avoid-collect-iter-snapshot.yml  iter-use-copied-snapshot.yml  iter-use-find-snapshot.yml  micro-use-is-empty-snapshot.yml  own-accept-str-slice-not-string-snapshot.yml
cli/rule-tests/algorithms/: use-sort-by-key-test.yml  use-sort-unstable-by-key-test.yml
cli/rule-tests/data-structures/: use-entry-api-test.yml
cli/rule-tests/iterators/: use-any-test.yml  use-flat-map-test.yml
cli/rule-tests/micro/: use-is-empty-test.yml  use-is-not-empty-test.yml
cli/rule-tests/ownership/: accept-slice-not-vec-test.yml
cli/rules/: sgconfig.yml
cli/rules/clean-architecture/: clean-arch-adapters-no-infra.yml  clean-arch-adapters-no-usecase-imports.yml  clean-arch-domain-no-external-crates.yml  clean-arch-domain-no-framework-traits.yml  clean-arch-domain-no-frameworks.yml  clean-arch-domain-no-io-operations.yml  clean-arch-domain-no-serde-derive.yml  clean-arch-infra-no-adapters-usecases.yml  clean-arch-main-only-app.yml  clean-arch-no-process-exit-outside-main.yml  clean-arch-no-serde-json-outside-adapters.yml  clean-arch-usecases-no-global-state.yml  clean-arch-usecases-no-infrastructure.yml  clean-arch-usecases-no-io-operations.yml  clean-arch-usecases-no-task-spawning.yml
cli/rules/event-driven/: event-driven-no-unbounded-channel.yml  event-driven.yml
cli/rules/rust-codemods/algorithms/: use-sort-by-key.yml  use-sort-unstable-by-key.yml
cli/scripts/: check-architecture.sh  copy-native.js  platform.js  postinstall.js  strip-comments.sh  sync-web.js  xtask.ts
cli/src/: attach.rs  client.rs  color.rs  commands.rs  connection.rs  demo.rs  handlers.rs  json_ext.rs  lib.rs  main.rs  protocol.rs  pty.rs  session.rs  sync_utils.rs  terminal.rs  wait.rs
cli/src/daemon/: ansi_keys.rs  error_messages.rs  lock_helpers.rs  mod.rs  rpc_types.rs  select_helpers.rs  server.rs
cli/src/detection/: framework.rs  ink.rs  mod.rs  pattern.rs  region.rs  registry.rs  traits.rs
cli/src/vom/: classifier.rs  feedback.rs  interaction.rs  mod.rs  segmentation.rs
cli/tests/: cli_spawn_tests.rs  cmd_e2e_tests.rs  e2e_daemon_tests.rs  e2e_workflow_tests.rs
cli/tests/cmd/: 00-help.md  01-health.md  02-spawn.md  03-sessions.md  04-snapshot.md  05-click.md  06-fill.md  07-press.md  08-wait.md  09-scroll.md  10-kill.md  11-env.md  12-completions.md  99-errors.md
cli/tests/common/: mock_daemon.rs  mod.rs  real_test_harness.rs  test_harness.rs
crates/agent-tui/: Cargo.toml
crates/agent-tui-core/: Cargo.toml
crates/agent-tui-core/src/: element.rs  lib.rs  screen.rs  style.rs  test_fixtures.rs
crates/agent-tui-daemon/: Cargo.toml
crates/agent-tui-daemon/src/: config.rs  error.rs  file_lock.rs  lib.rs  lock_helpers.rs  metrics.rs  pty_session.rs  repository.rs  router.rs  select_helpers.rs  server.rs  session.rs  signal_handler.rs  terminal_state.rs  usecase_container.rs  wait.rs
crates/agent-tui-daemon/tests/: architecture_tests.rs
crates/agent-tui-ipc/: Cargo.toml
crates/agent-tui-ipc/src/: client.rs  daemon_lifecycle.rs  error.rs  error_codes.rs  error_messages.rs  lib.rs  mock_client.rs  snapshot_dto.rs  types.rs  version.rs
crates/agent-tui-terminal/: Cargo.toml
crates/agent-tui-terminal/src/: error.rs  lib.rs  pty.rs  terminal.rs
crates/agent-tui/src/: app.rs  attach.rs  commands.rs  error.rs  handlers.rs  lib.rs  main.rs  presenter.rs
crates/agent-tui/src/app/: error.rs  (+4 more)
crates/agent-tui/tests/: claude_code_e2e.rs  concurrent_tests.rs  connection_failure_tests.rs  contracts.rs  daemon_no_autostart_tests.rs  dbl_click_tests.rs  e2e_daemon_tests.rs  e2e_workflow_tests.rs  error_propagation_tests.rs  integration_concurrent_tests.rs  integration_connection_failure_tests.rs  integration_contracts_tests.rs  integration_daemon_tests.rs  integration_dbl_click_tests.rs  integration_error_propagation_tests.rs  integration_lock_timeout_tests.rs  integration_parameter_validation_tests.rs  integration_response_edge_cases_tests.rs  integration_retry_mechanism_tests.rs  integration_session_state_tests.rs  lock_timeout_tests.rs  parameter_validation_tests.rs  pty_operations_tests.rs  response_edge_cases_tests.rs  retry_mechanism_tests.rs  session_state_tests.rs  slow_tests.rs
(+811 files in other folders)
