[workspace]
members = [
    "crates/agent-tui",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.3.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/pproenca/agent-tui"

[workspace.dependencies]
# External (pinned)
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
crossterm = "0.29"
base64 = "0.22"
portable-pty = "0.9"
vt100 = "0.16"
regex = "1.12"
rand = "0.9"
libc = "0.2"
signal-hook = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-stream = { version = "0.1", features = ["sync"] }
avt = "0.16"

# Dev dependencies (used in [dev-dependencies] sections)
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"
proptest = "1.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
