[workspace]
members = [
    "crates/agent-tui",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/pproenca/agent-tui"

[workspace.dependencies]
# External (pinned)
async-trait = "0.1"
anyhow = "1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
crossterm = "0.29"
base64 = "0.22"
portable-pty = "0.9"
regex = "1.12"
rand = "0.9"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
libc = "0.2"
signal-hook = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tattoy-wezterm-term = "0.1.0-fork.5"
tattoy-wezterm-surface = "0.1.0-fork.2"
crossbeam-channel = "0.5"
bytes = "1.7"
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"
proptest = "1.9"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
