[package]
name = "agent-tui-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon server and session management for agent-tui"

[dependencies]
agent-tui-common.workspace = true
agent-tui-terminal.workspace = true
agent-tui-core.workspace = true
agent-tui-ipc.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
signal-hook.workspace = true

[dev-dependencies]
