[package]
name = "agent-tui-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC protocol and client for agent-tui"

[dependencies]
agent-tui-common.workspace = true
agent-tui-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
