[package]
name = "agent-tui-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PTY and terminal emulation for agent-tui"

[dependencies]
agent-tui-common.workspace = true
agent-tui-core.workspace = true
portable-pty.workspace = true
serde_json.workspace = true
vt100.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
