[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for AI agents to interact with TUI applications"
keywords = ["tui", "terminal", "ai", "agent", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agent-tui"
path = "src/main.rs"

[lib]
name = "agent_tui"
path = "src/lib.rs"

[dependencies]
agent-tui-common.workspace = true
agent-tui-core.workspace = true
agent-tui-daemon.workspace = true
agent-tui-ipc.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
crossterm.workspace = true
base64.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true
