[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for AI agents to interact with TUI applications"
keywords = ["tui", "terminal", "ai", "agent", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agent-tui"
path = "src/main.rs"

[lib]
name = "agent_tui"
path = "src/lib.rs"

[dependencies]
# CLI
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

# Async & concurrency
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
axum.workspace = true

# Terminal emulation
portable-pty.workspace = true
vt100.workspace = true
avt.workspace = true

# VOM analysis
regex.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
signal-hook.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true
proptest.workspace = true
once_cell = "1.19"
