[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for AI agents to interact with TUI applications"
keywords = ["tui", "terminal", "ai", "agent", "automation"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "agent-tui"
path = "src/main.rs"

[lib]
name = "agent_tui"
path = "src/lib.rs"

[features]
slow-tests = []
stress-tests = []

[dependencies]
# CLI
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

# Async & concurrency
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true
bytes.workspace = true
axum.workspace = true
tower-http.workspace = true
rand.workspace = true

# Terminal emulation
portable-pty.workspace = true
tattoy-wezterm-term.workspace = true
tattoy-wezterm-surface.workspace = true

# VOM analysis
regex.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
signal-hook.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true
proptest.workspace = true
once_cell = "1.19"
