[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for AI agents to interact with TUI applications"
keywords = ["tui", "terminal", "ai", "agent", "automation"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[lints]
workspace = true

[[bin]]
name = "agent-tui"
path = "src/main.rs"

[lib]
name = "agent_tui"
path = "src/lib.rs"

[features]
slow-tests = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
agent-tui-app.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
serde.workspace = true
serde_json.workspace = true
predicates.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true
proptest.workspace = true
once_cell = "1.19"
portable-pty.workspace = true
