[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
cargo_metadata = "0.23"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2 = "0.10"
walkdir = "2.5"

[dev-dependencies]
tempfile.workspace = true
